--- a/css/home.css
+++ b/css/home.css
@@ -44,7 +44,7 @@ html, body {
     background-image: url("../background.jpg");
     background-size: cover;
     width: 100%;
-    max-width: 450px;  /* Maksimal untuk layar kecil */
+    max-width: 344px;  /* Maksimal untuk layar kecil */
     height: 100%;
     overflow: hidden;
     display: flex;
@@ -294,16 +294,59 @@ html, body {
     margin-bottom: -10px;
 }
 
+
 /* Memastikan tampilan responsif di desktop */
+@media (min-width: 344px) {
+    .container {
+        max-width: 344px;
+    }
+}
+
 @media (min-width: 360px) {
     .container {
         max-width: 360px;
     }
 }
 
+@media (min-width: 375px) {
+    .container {
+        max-width: 375px;
+    }
+}
+
+@media (min-width: 390px) {
+    .container {
+        max-width: 390px;
+    }
+}
+
+@media (min-width: 412px) {
+    .container {
+        max-width: 412px;
+    }
+}
+
+@media (min-width: 414px) {
+    .container {
+        max-width: 414px;
+    }
+}
+
+@media (min-width: 430px) {
+    .container {
+        max-width: 430px;
+    }
+}
+
 @media (min-width: 475px) {
     .container {
         max-width: 475px;
+    }
+}
+
+@media (min-width: 540px) {
+    .container {
+        max-width: 540px;
     }
 }
 
@@ -316,6 +359,24 @@ html, body {
 @media (min-width: 768px) {
     .container {
         max-width: 768px;
+    }
+}
+
+@media (min-width: 820px) {
+    .container {
+        max-width: 820px;
+    }
+}
+
+@media (min-width: 853px) {
+    .container {
+        max-width: 853px;
+    }
+}
+
+@media (min-width: 912px) {
+    .container {
+        max-width: 912px;
     }
 }
 
