--- a/css/home2.css
+++ b/css/home2.css
@@ -650,12 +650,27 @@ html, body {
     background-color: #006666;
 }
 
-#spinner {
+#spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
     display: flex;
-    position: relative;
     justify-content: center;
-    left: 50%;
+    align-items: center;
     z-index: 9999;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.spinner {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
 }
 
 #btnClosePopup {
